[project]
name = "molly"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "markdown>=3.10",
    "pelican>=4.12.0",
]

[dependency-groups]
dev = [
    "ruff>=0.15.19",
    "ty>=0.0.50",
]

[tool.ruff.lint]
select = ["ANN", "E", "F", "FURB", "I", "PERF", "RUF", "S", "UP"]
